<resources>
    <string name="app_name">Alpha Healthcare</string>
    <string name="tv_let_s_find_your_doctor">Let\'s Find Your Doctor</string>
    <string name="contentDescription">image</string>
    <string name="et_hint_search_doctor">Search Doctor</string>
    <string name="et_hint_search_patient">Search Patient</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="tv_available_for_your_need">Available for your need</string>
    <string name="btn_appointment">Appointment</string>
    <string name="btn_serve">Serve</string>
    <string name="tv_how_re_you_today">How\'re you today?</string>
    <string name="tv_consults_for_today">Consults for today</string>
    <string name="bn_home">Home</string>
    <string name="bn_doctor">Doctor</string>
    <string name="bn_chat">Chat</string>
    <string name="bn_appointments">Appointments</string>
    <string name="tv_create_an_account">Create an account</string>
    <string name="tv_sign_up_to_continue">Sign up to continue</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="btn_login">Login</string>
    <string name="tv_welcome_back">Welcome Back,</string>
    <string name="tv_sign_in_to_continue">Sign in to continue</string>
    <string name="tv_don_t_have_an_account">Don\'t have an account?</string>
    <string name="menu_logout">Logout</string>
    <string name="doctor_list">Doctor List</string>
    <string name="patient_list">My Patient List</string>
    <string name="chat_with_doc">Chat with doctor</string>
    <string name="chat_with_patient">Chat with patient</string>
    <string name="tv_time">Time</string>
    <string name="tv_select_appointment_time">Select Appointment Time</string>
    <string name="tv_appointment_title">Appointment Title</string>
    <string name="btn_book_appointment">Book Appointment</string>
    <string name="tv_appointment_description">Appointment Description</string>
    <string name="tv_my_appointments">My Appointments</string>
    <string name="content_description_fb">floating button</string>
    <string name="tv_appointment">Appointment</string>
    <string name="tv_experience">Experience</string>
    <string name="tv_patients">Patients</string>
    <string name="tv_about_doctor">About Doctor</string>
    <string name="tv_profile">Profile</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="tv_change_profile_picture">Change Profile Picture</string>
    <string name="hint_address">Address</string>
    <string name="btn_update">Update</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="place_holder">---</string>
    <string name="imageTransition">imageTransition</string>
    <string name="nameTransition">nameTransition</string>
    <string name="tv_no_appointments">No appointments for this day !!!</string>
    <string name="tv_no_recent_chat">No recent chat found !!!</string>
    <string name="tv_no_data_found">No data found !!!</string>
    <string name="rb_patient">Patient</string>
    <string name="tv_are_you_a_patient_or_doctor">Are you a Patient or Doctor ?</string>
    <string name="hint_city">City</string>
    <string name="hint_experience_years">Experience (Years)</string>
    <string name="hint_about_your_self">About your self (like services you provide)</string>
    <string name="hint_about">About</string>
    <string name="hint_specialization">Specialization</string>
    <string name="degrees">Degrees*</string>
    <string name="cb_mbbs">MBBS</string>
    <string name="cb_md">MD</string>
    <string name="cb_bams">BAMS</string>
    <string name="cb_bhms">BHMS</string>
    <string name="pgdcc">PGDCC</string>
    <string name="cb_dm">DM</string>
    <string name="cb_other">Other</string>
    <string name="et_degree">Degree</string>
    <string name="tv_tag_line">Healthcare made simple</string>
    <string name="hint_send_message">Send message...</string>
    <string name="tv_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="btn_save">Save</string>
    <string name="tv_gender">Gender</string>
    <string name="rb_other">Other</string>
    <string name="rb_female">Female</string>
    <string name="rb_male">Male</string>
    <string name="hint_username">Username</string>
    <string name="hint_state">State</string>
    <string name="hint_country">Country</string>
    <string name="hint_pin_code">PIN Code</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="tv_my_all_appointments">My All Appointments</string>
    <string name="tv_view_all">view all</string>
    <string name="tv_hello">Hello,</string>
    <string name="tv_personal_info">Personal Information :</string>
    <string name="tv_residence">Residence :</string>
    <string name="tv_professional_detail">Professional Details :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_participants">Participants</string>
    <string name="tv_add_invite">Add / Invite</string>
    <string name="tv_created_on">Created on</string>
    <string name="tv_created_by">Created by</string>
    <string name="btn_export_as_pdf">Export as PDF</string>
    <string name="btn_delete_chat">Delete Chat</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="tv_find_your_doctor">Find Your Doctor</string>
    <string name="tv_storage_your_nmedical_records">Storage Your\nMedical Records</string>
    <string name="tv_personalized_consultation">Personalized consultation\nand Care</string>
    <string name="btn_get_started">Get Started</string>

    <string name="select">Select…</string>
    <string name="tv_contact_details">Contact Details :</string>
    <string name="tv_you_have_appointments_with">You have appointments with</string>
    <string name="tv_you_have_appointment_with">You have appointment with</string>
    <string name="tv_appointment_count">Appointment count…</string>
    <string name="error_text_for_gender">Please select your gender</string>
    <string name="tv_or">or</string>
    <string name="btn_login_with_biometric">Login with biometric</string>
    <string name="tv_you_have_not_added_biometric_yet">You have not added biometric yet</string>
    <string name="tv_enter_your_sign_in_credential_and_biometric">Enter your sign in credential and biometric</string>
    <string name="tv_login_with_password">Login with email and password</string>
    <string name="tv_enroll_biometric">Enroll Biometric</string>

</resources>