<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/botNavHome"
        android:title="@string/bn_home"
        android:icon="@drawable/ic_baseline_home_24"
        />

    <item
        android:id="@+id/botNavDoctor"
        android:title="@string/bn_doctor"
        android:icon="@drawable/doctor"
        />

    <item
        android:id="@+id/botNavChat"
        android:title="@string/bn_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        />

    <item
        android:id="@+id/botNavApt"
        android:title="@string/bn_appointments"
        android:icon="@drawable/appointment"
        />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        />

</menu>